# sawe

./: .gitignore  .rules  .sup-fix-c1-report.md  CONTRIBUTING.md  Cargo.toml  FORK.md  README.md  debug.plist  run.sh  typos.toml
crates/claude_native/: Cargo.toml
crates/claude_native/src/: claude_native.rs  claude_settings.rs  command.rs  connection.rs  process.rs  protocol.rs  translate.rs  watchdog.rs  worktree_hook.rs
crates/claude_native/tests/: mock_claude.rs
crates/claude_native/tests/fixtures/: mock_claude.sh
crates/console_panel/: Cargo.toml
crates/console_panel/src/: actions.rs  chat_provider.rs  console_panel.rs  console_panel_settings.rs  panel.rs  terminal_provider.rs
crates/editor_mcp/: Cargo.toml
crates/editor_mcp/src/: editor_mcp.rs  handoff.rs  lifecycle.rs  notifications.rs  operations.rs  registry.rs  subscriptions.rs  tier.rs  tier_guard.rs  tools.rs  window_ids.rs  workspace_seq.rs
crates/editor_mcp/src/tools/: capabilities.rs  operations.rs  subscribe.rs
crates/editor_mcp/tests/: capabilities_test.rs  clickable_tree_e2e_test.rs  event_sources_e2e_test.rs  event_tools_test.rs  notifications_e2e_test.rs  rename_folder_move_e2e_test.rs  run_config_e2e_test.rs  server_e2e_test.rs  set_active_member_e2e_test.rs  solution_id_injection_e2e_test.rs  solutions_add_empty_member_e2e_test.rs  solutions_add_member_e2e_test.rs  solutions_e2e_test.rs  window_input_e2e_test.rs
crates/git_conflict_ui/: Cargo.toml
crates/git_conflict_ui/src/: ai_suggest.rs  ai_suggest_modal.rs  binary_view.rs  chunks.rs  conflict_parser.rs  git_conflict_ui.rs  mcp_tools.rs  operations.rs  resolver_view.rs  sidebar.rs  toolbar.rs
crates/remote_control/: Cargo.toml
crates/remote_control/src/: allow_list.rs  auth.rs  cert.rs  dispatch.rs  listener.rs  model.rs  proxy.rs  remote_control.rs  settings.rs  store.rs  wire_codec.rs  wire_dict.rs
crates/remote_control/tests/: listener_e2e.rs  proxy_e2e.rs
crates/remote_control_ui/: Cargo.toml
crates/remote_control_ui/src/: modal.rs  qr_popover.rs  remote_control_ui.rs  status_item.rs
crates/run_config/: Cargo.toml
crates/run_config/src/: file_format.rs  mcp.rs  model.rs  provider.rs  providers.rs  run_config.rs  settings.rs  store.rs
crates/run_config/src/providers/: debug.rs  shell.rs  task_ref.rs
crates/run_config_ui/: Cargo.toml
crates/run_config_ui/src/: actions.rs  edit_modal.rs  run_config_ui.rs  run_controller.rs  schema_form.rs  status_item.rs  toolbar_strip.rs
crates/solution_agent/: .rules  Cargo.toml
crates/solution_agent/resources/: compact_context_instructions.md  supervisor_audit_instructions.md  supervisor_judge_instructions.md
crates/solution_agent/src/: actions.rs  adapter.rs  agent_settings.rs  background_agent.rs  background_shell.rs  claude_adapter.rs  cold_persistence.rs  compact.rs  conversation_render.rs  db.rs  event_sources.rs  expanded_compose.rs  mcp.rs  message_generator.rs  metrics_emitter.rs  model.rs  model_catalog.rs  notifier.rs  pool.rs  rename_session_modal.rs  reopen_session_modal.rs  session_entry.rs  session_view.rs  slash_commands.rs  solution_agent.rs  status_item.rs  status_row.rs  store.rs  stream.rs  supervisor.rs  supervisor_instruction_modal.rs  teammate_watchers.rs  test_support.rs  upload.rs
crates/solution_agent/src/conversation_render/: image.rs  tests.rs  tool_call.rs  user_message.rs
crates/solution_agent/src/db/: attachments.rs  background.rs  entries.rs  sessions.rs  supervisor.rs  tests.rs
crates/solution_agent/src/mcp/: authorization.rs  context.rs  debug.rs  dto.rs  lifecycle.rs  messaging.rs  read.rs  supervisor.rs  tests.rs  uploads.rs
crates/solution_agent/src/model/: tests.rs
crates/solution_agent/src/session_view/: compose.rs  expanded.rs  find.rs  lifecycle.rs  paste.rs  recall.rs  render_queue.rs  subagent_strip.rs  task_subagent_strip.rs  tests.rs
crates/solution_agent/src/store/: acp_event.rs  connection_pool.rs  hydration.rs  queue.rs  supervisor_engine.rs  teammate_reconciler.rs  teardown.rs  test_support.rs  tests.rs
crates/solution_agent/src/supervisor/: briefing.rs  persistence.rs  state.rs  tests.rs
crates/solution_agent/tests/: basic_e2e_test.rs  create_session_no_workspace_e2e_test.rs
crates/solution_agent/tests/support/: mod.rs
crates/solution_git/: Cargo.toml
crates/solution_git/src/: aggregator.rs  ai_cherry_pick_suggest.rs  branch_protection.rs  cross_cherry_pick.rs  dashboard.rs  mcp.rs  push.rs  solution_git.rs  update.rs
crates/solutions/: Cargo.toml
crates/solutions/src/: add_member.rs  auto_trust.rs  branch_protection.rs  cache.rs  db.rs  dock_snapshot.rs  event_sources.rs  folder_name.rs  git.rs  mcp.rs  migrate.rs  model.rs  path_migrations.rs  persistence.rs  rename.rs  settings.rs  slug.rs  solutions.rs  store.rs  tabs_snapshot.rs
crates/solutions/src/mcp/: catalog.rs  diagnostics.rs  member_mgmt.rs  project_files.rs  solutions_lifecycle.rs  tests.rs  visual_structure.rs  workspace_state.rs
crates/solutions/src/store/: catalog.rs  lifecycle.rs  members.rs
crates/solutions/src/tests/: cold_reconcile.rs  persistence_e2e.rs  rename_hot_worktree.rs
crates/solutions/tests/: identity_migration_rehearsal.rs
crates/solutions_ui/: Cargo.toml
crates/solutions_ui/src/: actions.rs  add_member_picker.rs  add_project_picker.rs  delete_confirm_modal.rs  empty_solution_page.rs  member_layout.rs  modals.rs  open.rs  picker.rs  project_tab.rs  project_tab_strip.rs  solution_picker_dropdown.rs  solution_tab.rs  solution_tab_strip.rs  solutions_ui.rs  status_bar.rs  switch.rs  welcome.rs  welcome_trigger.rs  window_helpers.rs
crates/solutions_ui/src/modals/: add_catalog_project.rs  delete_catalog_project.rs  delete_solution.rs  edit_catalog_project.rs  new_project_in_solution.rs  new_solution.rs  rename_member.rs  rename_solution.rs
crates/workspace_events/: Cargo.toml
crates/workspace_events/src/: coordinator.rs  dto.rs  lifecycle.rs  list.rs  mcp.rs  shutdown.rs  snapshot.rs  workspace_events.rs
crates/workspace_events/tests/: snapshot_test.rs
crates/workspace_events/tests/support/: mod.rs
(+569 files in other folders)
