[package]
name = "console_panel"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/console_panel.rs"
doctest = false

[dependencies]
anyhow.workspace = true
collections.workspace = true
futures.workspace = true
gpui.workspace = true
icons.workspace = true
language.workspace = true
log.workspace = true
project.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
settings_content = { workspace = true }
solution_agent.workspace = true
solutions.workspace = true
task.workspace = true
terminal.workspace = true
terminal_view.workspace = true
theme.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
zed_actions.workspace = true

[dev-dependencies]
fs.workspace = true
gpui = { workspace = true, features = ["test-support"] }
project = { workspace = true, features = ["test-support"] }
settings = { workspace = true, features = ["test-support"] }
solution_agent = { workspace = true, features = ["test-support"] }
solutions = { workspace = true, features = ["test-support"] }
tempfile.workspace = true
theme_settings.workspace = true
workspace = { workspace = true, features = ["test-support"] }
