[package]
name = "editor_mcp"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/editor_mcp.rs"
doctest = false

[dependencies]
anyhow.workspace = true
chrono.workspace = true
collections.workspace = true
parking_lot.workspace = true
context_server.workspace = true
fs2.workspace = true
gpui.workspace = true
log.workspace = true
paths.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
smol.workspace = true
util.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
pretty_assertions.workspace = true
run_config.workspace = true
settings = { workspace = true, features = ["test-support"] }
solutions = { workspace = true, features = ["test-support"] }
tempfile.workspace = true
workspace.workspace = true
