[package]
name = "remote_control"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/remote_control.rs"
doctest = false

[features]
test-support = ["gpui/test-support"]

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
editor_mcp.workspace = true
flate2.workspace = true
fs.workspace = true
futures.workspace = true
gpui.workspace = true
gpui_tokio.workspace = true
hex.workspace = true
hmac.workspace = true
log.workspace = true
paths.workspace = true
rand.workspace = true
rcgen.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
sha2.workspace = true
subtle.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["net", "time", "sync", "macros", "rt", "rt-multi-thread", "io-util"] }
tokio-rustls.workspace = true
tokio-tungstenite.workspace = true
util.workspace = true

[dev-dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
editor_mcp.workspace = true
fs = { workspace = true, features = ["test-support"] }
futures.workspace = true
gpui = { workspace = true, features = ["test-support"] }
hex.workspace = true
hmac.workspace = true
log.workspace = true
pretty_assertions.workspace = true
rcgen.workspace = true
rustls.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["net", "time", "sync", "macros", "rt", "rt-multi-thread", "io-util", "test-util"] }
tokio-tungstenite.workspace = true
