[package]
name = "run_config"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/run_config.rs"
doctest = false

[features]
test-support = ["gpui/test-support", "project/test-support"]

[dependencies]
anyhow.workspace = true
collections.workspace = true
context_server.workspace = true
editor_mcp.workspace = true
fs.workspace = true
futures.workspace = true
gpui.workspace = true
log.workspace = true
paths.workspace = true
project.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_lenient.workspace = true
settings.workspace = true
smol.workspace = true
task.workspace = true
ui.workspace = true
util.workspace = true
uuid.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
project = { workspace = true, features = ["test-support"] }
pretty_assertions.workspace = true
