[package]
name = "run_config_ui"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/run_config_ui.rs"
doctest = false

[dependencies]
anyhow.workspace = true
collections.workspace = true
console_panel.workspace = true
dap.workspace = true
editor.workspace = true
gpui.workspace = true
log.workspace = true
menu.workspace = true
project.workspace = true
run_config.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
solutions.workspace = true
task.workspace = true
terminal.workspace = true
terminal_view.workspace = true
theme.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true

[dev-dependencies]
db.workspace = true
gpui = { workspace = true, features = ["test-support"] }
project = { workspace = true, features = ["test-support"] }
run_config = { workspace = true, features = ["test-support"] }
workspace = { workspace = true, features = ["test-support"] }
