[package]
name = "solution_git"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/solution_git.rs"
doctest = false

[dependencies]
anyhow.workspace = true
collections.workspace = true
context_server.workspace = true
editor_mcp.workspace = true
fs.workspace = true
futures.workspace = true
git.workspace = true
git_ui.workspace = true
gpui.workspace = true
log.workspace = true
menu.workspace = true
notifications.workspace = true
parking_lot.workspace = true
paths.workspace = true
project.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
smol.workspace = true
solution_agent.workspace = true
solutions.workspace = true
theme.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
tempfile.workspace = true
