[package]
name = "solutions"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/solutions.rs"
doctest = false

[features]
test-support = []

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
collections.workspace = true
context_server.workspace = true
db.workspace = true
dirs.workspace = true
editor_mcp.workspace = true
fs.workspace = true
git.workspace = true
globset.workspace = true
gpui.workspace = true
image.workspace = true
language.workspace = true
log.workspace = true
lsp.workspace = true
paths.workspace = true
project.workspace = true
regex.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
sha2.workspace = true
shellexpand.workspace = true
smol.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true
util.workspace = true
workspace.workspace = true

[dev-dependencies]
db = { workspace = true, features = ["test-support"] }
fs.workspace = true
gpui = { workspace = true, features = ["test-support"] }
language = { workspace = true, features = ["test-support"] }
pretty_assertions.workspace = true
project = { workspace = true, features = ["test-support"] }
release_channel.workspace = true
semver.workspace = true
settings = { workspace = true, features = ["test-support"] }
theme.workspace = true
theme_settings.workspace = true
# `project/test-support` turns on `remote/test-support`, which adds the
# `RemoteConnectionIdentity::Mock` variant. The `workspace` crate only matches
# that variant when *its own* test-support is on, so the two must be enabled
# together or `workspace` fails to compile in this crate's test build.
workspace = { workspace = true, features = ["test-support"] }
# Dev-only (cyclic: solution_agent depends on solutions). The identity-migration
# rehearsal has to drive BOTH databases from one test — the solutions DB produces
# the legacy slug → counter map that the agent DB's own migration consumes.
solution_agent.workspace = true
tempfile.workspace = true
